// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph Query Planner API plans basic queries 1`] = `
QueryAST {
  "head": MatchNode {
    "algorithm": "search",
    "children": Array [],
    "nodeFilters": Object {
      "type": "person",
    },
    "startNode": null,
  },
}
`;

exports[`Graph Query Planner API plans basic queries to traverse nodes 1`] = `
QueryAST {
  "head": MatchNode {
    "algorithm": "search",
    "children": Array [
      TraversalNode {
        "algorithm": "bfs",
        "children": Array [],
        "edgeFilter": "friends",
      },
    ],
    "nodeFilters": Object {
      "type": "person",
    },
    "startNode": null,
  },
}
`;

exports[`Graph Query Planner API plans basic queries with start node 1`] = `
QueryAST {
  "head": MatchNode {
    "algorithm": "search",
    "children": Array [
      TraversalNode {
        "algorithm": "bfs",
        "children": Array [],
        "edgeFilter": "friends",
      },
    ],
    "nodeFilters": Object {},
    "startNode": Node {
      "attributes": Object {
        "type": "temp",
      },
      "id": "cf8f7830-737b-4987-a7b0-49f8f35f3c48",
    },
  },
}
`;
